[project]
name = "reddit-to-youtube-automation"
version = "0.1.0"
description = "Automates conversion of Reddit posts into AI-generated avatar videos and uploads them to YouTube"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
license = {text = "MIT"}
keywords = ["reddit", "youtube", "automation", "ai", "video-generation"]
